Icon button baseline alignment fix

--- a/packages/cx-core/src/ui/Button.scss
+++ b/packages/cx-core/src/ui/Button.scss
@@ -31,7 +31,6 @@ $cx-button-state-style-map: (
       cursor: pointer,
       -webkit-appearance: none,
       -moz-appearance: none,
-      vertical-align: middle,
       appearance: none
    ),
    hover: (
